changes to make the plots Anne requested

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -4,12 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-04T16:09:07.891557Z",
-     "start_time": "2024-10-04T16:09:06.235384Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -26,6 +21,8 @@
     "import pandas as pd\n",
     "from importlib import reload\n",
     "from IPython import display\n",
+    "from adaptive_latents.plotting_functions import plot_history_with_tail\n",
+    "adaptive_latents.plotting_functions = reload(adaptive_latents.plotting_functions)\n",
     "\n"
    ]
   },
@@ -36,42 +33,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from adaptive_latents.plotting_functions import plot_history_with_tail\n",
-    "adaptive_latents.plotting_functions = reload(adaptive_latents.plotting_functions)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2",
-   "metadata": {},
-   "source": [
-    "* [jPCA figure](https://www.dropbox.com/scl/fo/duf5zbwcibsux467c6oc9/AIN-ZiFsy2Huyh8h7VMdL7g?dl=0&e=1&preview=Basic+jPCA+plot.pdf&rlkey=3o5axmq5hirel4cij7g64jc0r)\n",
-    "* [gpfa figure](https://users.ece.cmu.edu/~byronyu/software.shtml)\n",
-    "* [lfads figure](https://www.nature.com/articles/s41592-018-0109-9/figures/1) (copied from the paper)\n",
-    "* [cebra figure](https://www.nature.com/articles/s41586-023-06031-6/figures/1) (copied from the paper)"
+    "zong_run = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['naumann24u'] | dict(\n",
+    "    drop_behavior=True, \n",
+    "    sub_dataset_identifier=2,\n",
+    "    neural_smoothing_tau=.688,\n",
+    ")))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-04T16:09:08.172203Z",
-     "start_time": "2024-10-04T16:09:07.892410Z"
-    }
-   },
+   "id": "2",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "!echo $(hostname) $(git rev-parse --short HEAD)"
+    "%matplotlib qt\n",
+    "plt.plot(zong_run.pro_latents.t, zong_run.pro_latents)\n",
+    "\n",
+    "for s in run.d.opto_stimulations.loc[30:31,'sample']:\n",
+    "    plt.axvline(s, color='k')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "3",
    "metadata": {},
    "source": [
-    "# Intro Video"
+    "## Dimensionality reduction comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zong_run.d.sub_dataset, zong_run.d.sub_datasets"
    ]
   },
   {
@@ -80,36 +78,7 @@
    "id": "5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def intro_plot(d, tail_length=5, duration=10, start_time=10, fps=20):\n",
-    "    with AnimationManager(n_cols=2, n_rows=1, figsize=(10, 5), filetype='mp4', fps=fps) as am:\n",
-    "        am.axs[0,1].scatter(d.behavioral_data.a[:,0,0], d.behavioral_data.a[:,0,1])\n",
-    "        for current_t in np.linspace(start_time, start_time + duration, duration*fps):\n",
-    "            am.axs[0,0].cla()\n",
-    "    \n",
-    "            n_columns = np.floor(tail_length / np.median(np.diff(d.neural_data.t))).astype(int)\n",
-    "            idx = np.nonzero(~(d.neural_data.t < current_t))[0][0]\n",
-    "            \n",
-    "            \n",
-    "            am.axs[0,0].imshow(d.neural_data.a[idx-n_columns:idx,0,:].T, aspect='auto', interpolation='none', extent=[current_t - tail_length, current_t, d.neural_data.a.shape[2], 0],\n",
-    "                              vmin=d.neural_data.a.min(),vmax=d.neural_data.a.max())\n",
-    "            am.axs[0,0].set_xticklabels([])\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "            old_lims = am.axs[0,1].axis()\n",
-    "            am.axs[0,1].cla()\n",
-    "            am.axs[0,1].axis('off')\n",
-    "            \n",
-    "            s = ((current_t - tail_length) < d.behavioral_data.t) & (d.behavioral_data.t < current_t)\n",
-    "            am.axs[0,1].plot(d.behavioral_data.a[s,0,0], d.behavioral_data.a[s,0,1])\n",
-    "            pf.use_bigger_lims(am.axs[0,1], old_lims)\n",
-    "            \n",
-    "            am.grab_frame()\n",
-    "    \n",
-    "    display.display(display.Video(am.outfile, embed=True))\n",
-    "    plt.close()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -118,8 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = datasets.Odoherty21Dataset()\n",
-    "intro_plot(d)"
+    "run.d.opto_stimulations[run.d.opto_stimulations.loc[:,'sample'] == current_t].target_neuron.astype('int')"
    ]
   },
   {
@@ -129,8 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = datasets.Peyrache15Dataset()\n",
-    "intro_plot(d,start_time=16185)"
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -140,7 +107,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets.Peyrache15Dataset().neural_data.a.shape"
+    "%matplotlib inline\n",
+    "\n",
+    "run = zong_run\n",
+    "\n",
+    "start_t = run.d.opto_stimulations.loc[:,'sample'].min()\n",
+    "end_t = run.d.neural_data.t[-1]\n",
+    "\n",
+    "marks = run.d.opto_stimulations.loc[:,'sample']\n",
+    "\n",
+    "\n",
+    "tail_length = 10\n",
+    "\n",
+    "for l, name in [(run.ica_latents, 'ICA'), (run.jpca_latents, 'jPCA'), (run.pro_latents, 'proSVD')]:\n",
+    "    fig, axs = plt.subplots(ncols=1, nrows=1, squeeze=False, figsize=(5,4), layout='tight')\n",
+    "    with AnimationManager(fig=fig, make_axs=False, fps=10, filetype='mp4', dpi=200) as am:\n",
+    "        for current_t in tqdm(np.arange(start_t, end_t)):\n",
+    "                \n",
+    "            adaptive_latents.plotting_functions.plot_history_with_tail(axs[0,0], l, current_t, scatter_all=False, tail_length=tail_length, alpha=.2)\n",
+    "            axs[0,0].set_title(name)\n",
+    "            if current_t in list(marks):\n",
+    "                neuron = run.d.opto_stimulations[run.d.opto_stimulations.loc[:,'sample'] == current_t].target_neuron.iloc[0].astype(int)\n",
+    "                axs[0,0].scatter(.05 ,.95, transform=axs[0,0].transAxes, s=20, color='red')\n",
+    "            am.grab_frame()\n",
+    "\n",
+    "    plt.close()"
    ]
   },
   {
@@ -150,8 +141,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = datasets.Zong22Dataset()\n",
-    "intro_plot(d)"
+    "%matplotlib inline\n",
+    "\n",
+    "run = zong_run\n",
+    "fig, axs = plt.subplots(ncols=3, nrows=1, squeeze=False, figsize=(10,4), layout='tight')\n",
+    "\n",
+    "start_t = run.d.opto_stimulations.loc[29,'sample']\n",
+    "end_t = run.d.opto_stimulations.loc[31,'sample']\n",
+    "\n",
+    "marks = run.d.opto_stimulations.loc[:,'sample']\n",
+    "\n",
+    "tail_length = 5\n",
+    "with AnimationManager(fig=fig, make_axs=False, fps=10, filetype='mp4') as am:\n",
+    "    for current_t in np.arange(start_t, end_t):\n",
+    "            \n",
+    "        adaptive_latents.plotting_functions.plot_history_with_tail(axs[0,0], run.pro_latents, current_t, scatter_all=False, tail_length=tail_length, alpha=.2)\n",
+    "        adaptive_latents.plotting_functions.plot_history_with_tail(axs[0,1], run.jpca_latents, current_t,scatter_all=False, tail_length=tail_length, alpha=.2)\n",
+    "        adaptive_latents.plotting_functions.plot_history_with_tail(axs[0,2], run.ica_latents, current_t, scatter_all=False, tail_length=tail_length, alpha=.2)\n",
+    "        if current_t == marks:\n",
+    "            axs[0,0].scatter(.05 ,.95, transform=axs[0,0].transAxes, s=20, color='red')\n",
+    "        am.grab_frame()\n",
+    "\n",
+    "plt.close()"
    ]
   },
   {
@@ -161,8 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = datasets.Schaffer23Datset()\n",
-    "intro_plot(d, start_time=150)"
+    "am.outfile"
    ]
   },
   {
@@ -172,237 +182,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = datasets.TostadoMarcos24Dataset()\n",
-    "intro_plot(d)\n"
+    "display.display(display.Video(am.outfile, embed=True))"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "12",
    "metadata": {},
-   "source": [
-    "# Odoherty21 Portion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13",
-   "metadata": {},
-   "source": [
-    "## Intro video"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "14",
-   "metadata": {},
-   "source": [
-    "## Trajectory with 2d histogram background"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-04T16:34:23.476191Z",
-     "start_time": "2024-10-04T16:09:12.568680Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "odoherty_run = prp.PipelineRun(**prp.PipelineRun.default_parameter_values['odoherty21'])\n",
-    "run = odoherty_run"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-04T17:05:10.647632Z",
-     "start_time": "2024-10-04T17:05:10.535061Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "run = odoherty_run\n",
-    "fig, axs = plt.subplots(ncols=3, figsize=(15, 5))\n",
-    "\n",
-    "\n",
-    "tail_length = 1\n",
-    "with AnimationManager(fig=fig, make_axs=False, fps=20, filetype='mp4') as am:\n",
-    "    for current_t in np.linspace(600, 610, 200):\n",
-    "        plot_history_with_tail(axs[0], run.neural_target, current_t, tail_length, hist_bins=30)\n",
-    "        plot_history_with_tail(axs[1], run.jpca_latents,  current_t, tail_length, hist_bins=30)\n",
-    "        plot_history_with_tail(axs[2], run.beh_target, current_t, tail_length, hist_bins=30)\n",
-    "        am.grab_frame()\n",
-    "\n",
-    "plt.close();\n",
-    "display.display(display.Video(am.outfile, embed=True))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17",
-   "metadata": {},
-   "source": [
-    "## Data, Latent, Prediction graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-04T16:43:30.921132Z",
-     "start_time": "2024-10-04T16:43:02.270087Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "run = odoherty_run\n",
-    "\n",
-    "import adaptive_latents.plotting_functions\n",
-    "pv = reload(adaptive_latents.plotting_functions).PredictionVideo(run.d, fps=20, filetype='mp4')\n",
-    "\n",
-    "\n",
-    "\n",
-    "assert (run.next_bubble_joint_predictions.t == run.beh_predictions.t).all()\n",
-    "with pv.am:\n",
-    "    for current_t in np.linspace(600, 610, 200):\n",
-    "        pv.plot_for_video_t(\n",
-    "            current_t, \n",
-    "            run.jpca_latents, run.jpca_latents.t, \n",
-    "            run.next_bubble_joint_predictions, run.beh_predictions, run.beh_predictions.t,\n",
-    "            run.streams\n",
-    "        )\n",
-    "plt.close()\n",
-    "display.display(display.Video(pv.am.outfile, embed=True))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "19",
-   "metadata": {},
-   "source": [
-    "## Stream table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-04T16:49:55.001572Z",
-     "start_time": "2024-10-04T16:43:30.921820Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "run_all = odoherty_run\n",
-    "if False:\n",
-    "    run_no_neural = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[0])))\n",
-    "    run_no_beh = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[1])))\n",
-    "    def make_row(run):\n",
-    "        return ({\n",
-    "            'beh_x': run.beh_correlations[0],\n",
-    "            'beh_y': run.beh_correlations[1],\n",
-    "        } | {f'neural_{n}': run.neural_correlations[n] for n in range(len(run.neural_correlations))})\n",
-    "        \n",
-    "    pd.DataFrame(\n",
-    "        [\n",
-    "            make_row(run_all),\n",
-    "            make_row(run_no_neural),\n",
-    "            make_row(run_no_beh)\n",
-    "        ], \n",
-    "        index = ['all', 'no_neural', 'no_beh']\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "21",
-   "metadata": {},
-   "source": [
-    "# Zong22 Portion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-04T16:55:38.534593Z",
-     "start_time": "2024-10-04T16:49:55.034880Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "zong_run = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['zong22'] | dict(drop_behavior=True, sub_dataset_identifier=0)))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "23",
-   "metadata": {},
-   "source": [
-    "## Dimensionality reduction comparison"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-04T17:05:18.245911Z",
-     "start_time": "2024-10-04T17:05:17.959691Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "run = zong_run\n",
-    "fig, axs = plt.subplots(ncols=3, nrows=1, squeeze=False, figsize=(10,4), layout='tight')\n",
-    "\n",
-    "\n",
-    "tail_length = 1\n",
-    "with AnimationManager(fig=fig, make_axs=False, fps=10, filetype='mp4') as am:\n",
-    "    for current_t in np.linspace(540, 550, 100):\n",
-    "        plot_history_with_tail(axs[0,0], run.pro_latents, current_t, tail_length=1)\n",
-    "        plot_history_with_tail(axs[0,1], run.jpca_latents, current_t, tail_length=1)\n",
-    "        plot_history_with_tail(axs[0,2], run.ica_latents, current_t, tail_length=1)\n",
-    "        axs[0,2].set_ylim([-3,5])\n",
-    "        am.grab_frame()\n",
-    "\n",
-    "plt.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display.display(display.Video(am.outfile, embed=True))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-04T17:05:23.856250Z",
-     "start_time": "2024-10-04T17:05:23.488430Z"
-    }
-   },
    "outputs": [],
    "source": [
     "run = zong_run\n",
@@ -467,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "13",
    "metadata": {},
    "source": [
     "## Stimulation figure"
@@ -476,13 +263,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-04T16:55:39.633898Z",
-     "start_time": "2024-10-04T16:55:39.558276Z"
-    }
-   },
+   "id": "14",
+   "metadata": {},
    "outputs": [],
    "source": [
     "run = zong_run\n",
@@ -551,13 +333,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-04T16:55:39.633898Z",
-     "start_time": "2024-10-04T16:55:39.558276Z"
-    }
-   },
+   "id": "15",
+   "metadata": {},
    "outputs": [],
    "source": [
     "run = zong_run\n",
