adds a stimulation-aware linear dynamical regressor

--- a/workspace/day-notebooks/25-02-07.ipynb
+++ b/workspace/day-notebooks/25-02-07.ipynb
@@ -218,10 +218,7 @@
    "outputs": [],
    "source": [
     "def subtract_aligned_indices(a,b):\n",
-    "    a, b = (a, b) if a.t[0] < b.t[0] else (b, a)\n",
-    "    sorter = np.argsort(a.t)\n",
-    "    idx_a = sorter[np.searchsorted(a.t, b.t, sorter=sorter)]\n",
-    "    return al.ArrayWithTime(b - a[idx_a], a.t[idx_a])"
+    "    return al.ArrayWithTime.subtract_aligned_indices(a,b)"
    ]
   },
   {
