--- a/workspace/day-notebooks/25-02-19.ipynb
+++ b/workspace/day-notebooks/25-02-19.ipynb
@@ -9,6 +9,14 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from adaptive_latents import ArrayWithTime\n",
+    "from adaptive_latents.input_sources.autoregressor import AdamOptimizer\n",
+    "import adaptive_latents as al\n",
+    "import pandas as pd\n",
+    "\n",
+    "from adaptive_latents.transformer import DecoupledTransformer, Concatenator\n",
+    "from adaptive_latents.regressions import BaseVanillaOnlineRegressor, BaseNearestNeighborRegressor\n",
+    "\n",
     "\n",
     "rng = np.random.default_rng()"
    ]
@@ -17,6 +25,133 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AR_K:\n",
+    "    def __init__(self, *, k=1, rank_limit=None, rng=None, init_method='full_rank', iter_limit=200):\n",
+    "        # type: (AR_K, int, int | None, Any, Literal['full_rank', 'random'], int) -> None\n",
+    "        self.k = k\n",
+    "        self.rank_limit = rank_limit\n",
+    "        self.init_method = init_method\n",
+    "        self.iter_limit = iter_limit\n",
+    "\n",
+    "        self.neuron_d = None\n",
+    "        self.stim_d = None\n",
+    "\n",
+    "        self.As = None\n",
+    "        self.Bs = None\n",
+    "        self.Cs = None\n",
+    "        self.v = None\n",
+    "\n",
+    "        self._X = None\n",
+    "        self._Y = None\n",
+    "\n",
+    "        self.rng = rng or np.random.default_rng(0)\n",
+    "\n",
+    "    def fit(self, activity, stim):\n",
+    "        self.neuron_d = activity.shape[1]\n",
+    "        self.stim_d = stim.shape[1]\n",
+    "\n",
+    "        assert self.rank_limit is None or not self.rank_limit > self.neuron_d\n",
+    "\n",
+    "        Y = []\n",
+    "        X = []\n",
+    "        for i in range(self.k, activity.shape[0]):\n",
+    "            Y.append(activity[i])\n",
+    "            x = [activity[i - self.k:i].reshape(1, -1), stim[i - self.k:i].reshape(1, -1), [[1]]]\n",
+    "            X.append(np.hstack(x)[0])\n",
+    "\n",
+    "        Y = np.array(Y)\n",
+    "        X = np.array(X)\n",
+    "\n",
+    "        As, Bs, v = self._fit_full_rank(X, Y)\n",
+    "\n",
+    "        self.As = As\n",
+    "        self.Bs = Bs\n",
+    "        self.v = v\n",
+    "        self._X = X\n",
+    "        self._Y = Y\n",
+    "\n",
+    "    def _fit_full_rank(self, X, Y):\n",
+    "        beta, residuals, rank, s = np.linalg.lstsq(X, Y)\n",
+    "\n",
+    "        As = beta[:self.neuron_d * self.k].reshape(self.k, self.neuron_d, self.neuron_d)\n",
+    "        Bs = beta[self.neuron_d * self.k:self.neuron_d * self.k + self.stim_d * self.k].reshape(self.k, self.stim_d,\n",
+    "                                                                                                self.neuron_d)\n",
+    "        v = beta[self.neuron_d * self.k + self.stim_d * self.k:]\n",
+    "\n",
+    "        return As, Bs, v\n",
+    "\n",
+    "    def predict(self, initial_observations, stim, n_steps=100):\n",
+    "        new = np.zeros(shape=(n_steps + self.k, self.neuron_d)) * np.nan\n",
+    "        new[:self.k] = initial_observations[-self.k:]\n",
+    "\n",
+    "        for i in np.arange(n_steps) + self.k:\n",
+    "            new[i] = self.v\n",
+    "            new[i] = new[i] + ((new[i - self.k:i, None] - self.v) @ self.As).sum(axis=0)\n",
+    "            new[i] = new[i] + (stim[i - self.k:i, None] @ self.Bs).sum(axis=0)\n",
+    "        return new[-n_steps:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StimRegressor(DecoupledTransformer):\n",
+    "    def __init__(self, input_streams=None, spatial_stim_response=True, *args, **kwargs):\n",
+    "        input_streams = input_streams or {0:'X', 1:'stim'}\n",
+    "        super().__init__(input_streams=input_streams, *args, **kwargs)\n",
+    "        self.reg = BaseVanillaOnlineRegressor()\n",
+    "        self.stim_reg = BaseNearestNeighborRegressor()\n",
+    "        self.spatial_stim_response = spatial_stim_response\n",
+    "        self.last_seen = None\n",
+    "        self.last_seen_stim = None\n",
+    "        self.predictions = []\n",
+    "        self.auto_pred = []\n",
+    "        self.stim_pred = []\n",
+    "\n",
+    "    def _partial_fit(self, data, stream):\n",
+    "        if self.input_streams[stream] == 'X':\n",
+    "            if self.last_seen is not None:\n",
+    "                auto_pred = ArrayWithTime(self.reg.predict(self.last_seen), data.t)\n",
+    "                \n",
+    "                stim_pred = np.zeros(shape=data.shape)\n",
+    "                if self.last_seen_stim.any() and self.spatial_stim_response:\n",
+    "                    stim_pred += self.stim_reg.predict(self.last_seen)\n",
+    "                stim_pred = ArrayWithTime(stim_pred, data.t)\n",
+    "                \n",
+    "                prediction = auto_pred + stim_pred\n",
+    "                self.predictions.append(prediction)\n",
+    "                self.auto_pred.append(auto_pred)\n",
+    "                self.stim_pred.append(stim_pred)\n",
+    "                \n",
+    "                if not self.last_seen_stim.any():\n",
+    "                    self.reg.observe(self.last_seen, data)\n",
+    "                else:\n",
+    "                    prediction = self.reg.predict(self.last_seen)\n",
+    "                    self.stim_reg.observe(self.last_seen, data-prediction)\n",
+    "\n",
+    "                    prediction = ArrayWithTime(prediction, data.t)\n",
+    "                \n",
+    "            self.last_seen = data\n",
+    "\n",
+    "        if self.input_streams[stream] == 'stim':\n",
+    "            self.last_seen_stim = data\n",
+    "        \n",
+    "\n",
+    "    def transform(self, data, stream=0, return_output_stream=False):\n",
+    "        return data, stream\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,38 +164,161 @@
     "    [         0,            0, .99]\n",
     "])\n",
     "\n",
+    "def C(x,y):\n",
+    "    return y * x[0] / np.linalg.norm(x[:2])\n",
     "\n",
-    "ts = np.arange(0, 50*2.1*np.pi, dt)\n",
+    "ts = np.arange(0, 500*2.1*np.pi, dt)\n",
     "\n",
-    "stims = ts * 0\n",
-    "stims[rng.choice(stims.shape[0], size=10, replace=False)] = 1\n",
+    "stim = (ts * 0).reshape(-1, 1)\n",
+    "stim[rng.choice(stim.shape[0], size=(ts.max()*.1).astype(int), replace=False)] = 1\n",
     "\n",
     "X_true = np.zeros((ts.size, 3))\n",
-    "X_true[0,1] = 1\n",
+    "X_true[0,1] = 3\n",
     "\n",
     "for i, t in enumerate(ts):\n",
     "    if i == 0:\n",
     "        continue\n",
     "    X_true[i] = A @ X_true[i-1]\n",
+    "    X_true[i,2] += C(X_true[i], stim[i])\n",
     "    X_true[i] += rng.normal(0, 0.01, X_true[i].shape)\n",
-    "    X_true[i,2] += stims[i] * X_true[i,0] / np.linalg.norm(X_true[i,:2])\n",
     "\n",
     "X = X_true + rng.normal(0, 0.01, X_true.shape)\n",
     "\n",
+    "X = ArrayWithTime(X, ts)\n",
+    "stim = ArrayWithTime(stim, ts-1e-8)\n",
     "\n",
     "fig, ax = plt.subplots(subplot_kw={'projection': '3d'})\n",
     "ax.plot(X[:,0], X[:,1], X[:,2])\n",
-    "ax.axis('equal');"
+    "ax.axis('equal')\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "A"
+    "\n",
+    "s = StimRegressor(input_streams={0:'X', 1:'stim'}, spatial_stim_response=True)\n",
+    "s.offline_run_on([X, stim], show_tqdm=False);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "X = np.array([\n",
+    "    [0,0], \n",
+    "    [1,1], \n",
+    "    [2,2], \n",
+    "    [3,3], \n",
+    "    [4,4], \n",
+    "    [5,7], # stim\n",
+    "    [6,8], \n",
+    "    [7,11], # stim\n",
+    "    [8,12], \n",
+    "    [9,15], # stim\n",
+    "    [10,16],\n",
+    "])[:,1:2]\n",
+    "stim = np.zeros(shape=(X.shape[0], 1))\n",
+    "stim[5] = 1\n",
+    "stim[7] = 1\n",
+    "stim[9] = 1\n",
+    "\n",
+    "\n",
+    "X = al.ArrayWithTime(X, np.arange(X.shape[0]))\n",
+    "stim = al.ArrayWithTime(stim, np.arange(stim.shape[0]) - 0.001)\n",
+    "\n",
+    "s = StimRegressor(input_streams={1:'X', 0:'stim'}, spatial_stim_response=True)\n",
+    "s.offline_run_on([stim, X]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def operation(x):\n",
+    "    return al.ArrayWithTime.from_list(x, drop_early_nans=True, squeeze_type='to_2d')[:, slice(-1,None)]\n",
+    "\n",
+    "pred = operation(s.predictions)\n",
+    "p1 = operation(s.auto_pred)\n",
+    "p2 = operation(s.stim_pred[1:])\n",
+    "true = operation(X.slice(-pred.shape[0],None))\n",
+    "st = stim.slice(2,None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df = pd.DataFrame(np.hstack([st, p1, p2, pred, true]))\n",
+    "d = true.shape[-1]\n",
+    "df.columns = ['stim'] + ['p1']*d + ['p2']*d + ['pred']*d + ['true']*d\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(squeeze=False)\n",
+    "axs[0,0].plot(X.t, X[:,-1], '.-')\n",
+    "# axs[0,0].plot(stim.t, stim,'.')\n",
+    "axs[0,0].plot(pred.t, pred, '.-')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(squeeze=False)\n",
+    "error = pred - X[-pred.shape[0]]\n",
+    "axs[0,0].plot(error.t, error[:,-1], '.-')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred.t, X.t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(ncols=3)\n",
+    "\n",
+    "axs[0].matshow(ar.As[0])\n",
+    "axs[1].matshow(s.reg.get_beta())\n",
+    "axs[2].matshow(A.T)\n"
    ]
   }
  ],
