--- a/workspace/day-notebooks/25-02-19.ipynb
+++ b/workspace/day-notebooks/25-02-19.ipynb
@@ -10,12 +10,12 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from adaptive_latents import ArrayWithTime\n",
-    "from adaptive_latents.input_sources.autoregressor import AdamOptimizer\n",
     "import adaptive_latents as al\n",
     "import pandas as pd\n",
+    "import itertools\n",
     "\n",
     "from adaptive_latents.transformer import DecoupledTransformer, Concatenator\n",
-    "from adaptive_latents.regressions import BaseVanillaOnlineRegressor, BaseNearestNeighborRegressor\n",
+    "from adaptive_latents.regressions import BaseVanillaOnlineRegressor, BaseNearestNeighborRegressor, OnlineRegressor\n",
     "\n",
     "\n",
     "rng = np.random.default_rng()"
@@ -179,7 +179,7 @@
     "    if i == 0:\n",
     "        continue\n",
     "    X_true[i] = A @ X_true[i-1]\n",
-    "    X_true[i,2] += C(X_true[i], stim[i])\n",
+    "    X_true[i,2] += C(X_true[i-1], stim[i])\n",
     "    X_true[i] += rng.normal(0, 0.01, X_true[i].shape)\n",
     "\n",
     "X = X_true + rng.normal(0, 0.01, X_true.shape)\n",
@@ -200,9 +200,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "s1 = StimRegressor(input_streams={0:'X', 1:'stim'}, spatial_stim_response=True)\n",
+    "s1.offline_run_on([X, stim], show_tqdm=True)\n",
     "\n",
-    "s = StimRegressor(input_streams={0:'X', 1:'stim'}, spatial_stim_response=True)\n",
-    "s.offline_run_on([X, stim], show_tqdm=False);"
+    "s2 = StimRegressor(input_streams={0:'X', 1:'stim'}, spatial_stim_response=False)\n",
+    "s2.offline_run_on([X, stim], show_tqdm=True);\n"
    ]
   },
   {
@@ -291,9 +293,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(squeeze=False)\n",
-    "error = pred - X[-pred.shape[0]]\n",
-    "axs[0,0].plot(error.t, error[:,-1], '.-')\n",
+    "%matplotlib inline\n",
+    "_, axs = plt.subplots(nrows=2,squeeze=False, sharex=True)\n",
+    "\n",
+    "for i,s in enumerate([s2, s1]):\n",
+    "    pred = operation(s.predictions)\n",
+    "    axs[i,0].plot(X.t, X[:,-1])\n",
+    "    axs[i,0].plot(pred.t, pred[:,-1])\n",
+    "    axs[i,0].legend(['true system', 'predicted'])\n",
+    "    axs[i,0].set_xlim([2511.5,2513])\n",
+    "    axs[i,0].set_ylim([-1,2])\n",
+    "    \n",
+    "axs[0,0].set_title('no stim regression')\n",
+    "axs[1,0].set_title('with stim regression')\n",
     "\n"
    ]
   },
@@ -304,13 +316,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred.t, X.t"
+    "%matplotlib inline\n",
+    "_, axs = plt.subplots(squeeze=False)\n",
+    "\n",
+    "for s in [s2,s1]:\n",
+    "    pred = operation(s.predictions)\n",
+    "    sl = stim[-pred.shape[0]:,0]==1\n",
+    "    error = (pred - X[-pred.shape[0]:])\n",
+    "    axs[0,0].plot(error.t[sl], error[sl,-1], '.')\n",
+    "axs[0,0].legend(['no stim regression', 'with stim regression'])\n",
+    "\"aabbcCc\" \n",
+    "axs[0,0].set_title('Error comparison for timepoints with stimulation')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib qt\n",
+    "fig, ax = plt.subplots(subplot_kw={'projection': '3d'})\n",
+    "\n",
+    "X, Y = np.meshgrid(np.linspace(-6,6,10), np.linspace(-6,6,10))\n",
+    "Z = 0 * X\n",
+    "\n",
+    "for i_x, i_y in itertools.product(range(10), range(10)):\n",
+    "    Z[i_x, i_y] = C([X[i_x,i_y], Y[i_x,i_y], None], 1)\n",
+    "\n",
+    "ax.plot_surface(X, Y, Z, zorder=10)\n",
+    "plt.plot(s1.stim_reg.history[:,0], s1.stim_reg.history[:,1], s1.stim_reg.history[:,5], '.', zorder=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.unique(stim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
