fixes a bug in the autoregressor prediction method

--- a/workspace/day-notebooks/25-01-30.ipynb
+++ b/workspace/day-notebooks/25-01-30.ipynb
@@ -165,13 +165,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ar = AR_K(k=15, rank_limit=None)\n",
+    "ar = AR_K(k=30, rank_limit=None)\n",
     "ar.fit(a, stims)\n",
     "\n",
     "fig, axs = plt.subplots(nrows=5, ncols=2, figsize=(10, 10), tight_layout=True, sharey=True)\n",
     "window_time = 13 # seconds\n",
     "n_steps = int(window_time//a.dt) + 1\n",
-    "targets_index = 4\n",
+    "targets_index = 7\n",
     "errors = []\n",
     "truths = []\n",
     "\n",
@@ -224,8 +224,12 @@
     "    if estimated:\n",
     "        ret = []\n",
     "        for t in times:\n",
-    "            pre_trial = a.slice_by_time(t - ar.k * a.dt - 1, t)\n",
-    "            new_stims = stims.slice_by_time(t - ar.k * a.dt, t + window_time)\n",
+    "            try:\n",
+    "                idx = int(np.nonzero(a.t == t)[0][0])\n",
+    "            except IndexError:\n",
+    "                idx = np.argmin(np.abs(a.t - t))\n",
+    "            pre_trial = a.slice(idx-ar.k, idx)\n",
+    "            new_stims = stims.slice(idx-ar.k, int(idx + window_time//a.dt))\n",
     "            starting_state = pre_trial[-ar.k:]\n",
     "            prediction = ar.predict(starting_state, new_stims, n_steps=n_steps)\n",
     "            ret.append(prediction[:,neuron])\n",
@@ -265,6 +269,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "modulations = []\n",
     "for neuron in tqdm(range(a.shape[1])):\n",
     "    modulations.append([])\n",
@@ -279,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
