--- a/workspace/day-notebooks/25-02-19.ipynb
+++ b/workspace/day-notebooks/25-02-19.ipynb
@@ -28,82 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class AR_K:\n",
-    "    def __init__(self, *, k=1, rank_limit=None, rng=None, init_method='full_rank', iter_limit=200):\n",
-    "        # type: (AR_K, int, int | None, Any, Literal['full_rank', 'random'], int) -> None\n",
-    "        self.k = k\n",
-    "        self.rank_limit = rank_limit\n",
-    "        self.init_method = init_method\n",
-    "        self.iter_limit = iter_limit\n",
-    "\n",
-    "        self.neuron_d = None\n",
-    "        self.stim_d = None\n",
-    "\n",
-    "        self.As = None\n",
-    "        self.Bs = None\n",
-    "        self.Cs = None\n",
-    "        self.v = None\n",
-    "\n",
-    "        self._X = None\n",
-    "        self._Y = None\n",
-    "\n",
-    "        self.rng = rng or np.random.default_rng(0)\n",
-    "\n",
-    "    def fit(self, activity, stim):\n",
-    "        self.neuron_d = activity.shape[1]\n",
-    "        self.stim_d = stim.shape[1]\n",
-    "\n",
-    "        assert self.rank_limit is None or not self.rank_limit > self.neuron_d\n",
-    "\n",
-    "        Y = []\n",
-    "        X = []\n",
-    "        for i in range(self.k, activity.shape[0]):\n",
-    "            Y.append(activity[i])\n",
-    "            x = [activity[i - self.k:i].reshape(1, -1), stim[i - self.k:i].reshape(1, -1), [[1]]]\n",
-    "            X.append(np.hstack(x)[0])\n",
-    "\n",
-    "        Y = np.array(Y)\n",
-    "        X = np.array(X)\n",
-    "\n",
-    "        As, Bs, v = self._fit_full_rank(X, Y)\n",
-    "\n",
-    "        self.As = As\n",
-    "        self.Bs = Bs\n",
-    "        self.v = v\n",
-    "        self._X = X\n",
-    "        self._Y = Y\n",
-    "\n",
-    "    def _fit_full_rank(self, X, Y):\n",
-    "        beta, residuals, rank, s = np.linalg.lstsq(X, Y)\n",
-    "\n",
-    "        As = beta[:self.neuron_d * self.k].reshape(self.k, self.neuron_d, self.neuron_d)\n",
-    "        Bs = beta[self.neuron_d * self.k:self.neuron_d * self.k + self.stim_d * self.k].reshape(self.k, self.stim_d,\n",
-    "                                                                                                self.neuron_d)\n",
-    "        v = beta[self.neuron_d * self.k + self.stim_d * self.k:]\n",
-    "\n",
-    "        return As, Bs, v\n",
-    "\n",
-    "    def predict(self, initial_observations, stim, n_steps=100):\n",
-    "        new = np.zeros(shape=(n_steps + self.k, self.neuron_d)) * np.nan\n",
-    "        new[:self.k] = initial_observations[-self.k:]\n",
-    "\n",
-    "        for i in np.arange(n_steps) + self.k:\n",
-    "            new[i] = self.v\n",
-    "            new[i] = new[i] + ((new[i - self.k:i, None] - self.v) @ self.As).sum(axis=0)\n",
-    "            new[i] = new[i] + (stim[i - self.k:i, None] @ self.Bs).sum(axis=0)\n",
-    "        return new[-n_steps:]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class StimRegressor(DecoupledTransformer):\n",
     "    def __init__(self, input_streams=None, spatial_stim_response=True, *args, **kwargs):\n",
-    "        input_streams = input_streams or {0:'X', 1:'stim'}\n",
+    "        input_streams = input_streams or {}\n",
     "        super().__init__(input_streams=input_streams, *args, **kwargs)\n",
     "        self.reg = BaseVanillaOnlineRegressor()\n",
     "        self.stim_reg = BaseNearestNeighborRegressor()\n",
@@ -151,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
