--- a/workspace/day-notebooks/25-02-19.ipynb
+++ b/workspace/day-notebooks/25-02-19.ipynb
@@ -15,16 +15,24 @@
     "import itertools\n",
     "\n",
     "from adaptive_latents.transformer import DecoupledTransformer, Concatenator\n",
-    "from adaptive_latents.regressions import BaseVanillaOnlineRegressor, BaseNearestNeighborRegressor, OnlineRegressor\n",
+    "from adaptive_latents.regressions import BaseVanillaOnlineRegressor, BaseKNearestNeighborRegressor, OnlineRegressor\n",
     "\n",
     "\n",
     "rng = np.random.default_rng()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1",
+   "metadata": {},
+   "source": [
+    "## StimRegressor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +41,7 @@
     "        input_streams = input_streams or {}\n",
     "        super().__init__(input_streams=input_streams, *args, **kwargs)\n",
     "        self.reg = BaseVanillaOnlineRegressor()\n",
-    "        self.stim_reg = BaseNearestNeighborRegressor()\n",
+    "        self.stim_reg = BaseKNearestNeighborRegressor(k=2)\n",
     "        self.spatial_stim_response = spatial_stim_response\n",
     "        self.last_seen = None\n",
     "        self.last_seen_stim = None\n",
@@ -76,62 +84,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib qt\n",
-    "dt = 0.05\n",
-    "\n",
-    "A = np.array([\n",
-    "    [np.cos(dt),  -np.sin(dt), 0],\n",
-    "    [np.sin(dt),   np.cos(dt), 0],\n",
-    "    [         0,            0, .99]\n",
-    "])\n",
-    "\n",
-    "def C(x,y):\n",
-    "    return y * x[0] / np.linalg.norm(x[:2])\n",
-    "\n",
-    "ts = np.arange(0, 500*2.1*np.pi, dt)\n",
-    "\n",
-    "stim = (ts * 0).reshape(-1, 1)\n",
-    "stim[rng.choice(stim.shape[0], size=(ts.max()*.1).astype(int), replace=False)] = 1\n",
-    "\n",
-    "X_true = np.zeros((ts.size, 3))\n",
-    "X_true[0,1] = 3\n",
-    "\n",
-    "for i, t in enumerate(ts):\n",
-    "    if i == 0:\n",
-    "        continue\n",
-    "    X_true[i] = A @ X_true[i-1]\n",
-    "    X_true[i,2] += C(X_true[i-1], stim[i])\n",
-    "    X_true[i] += rng.normal(0, 0.01, X_true[i].shape)\n",
-    "\n",
-    "X = X_true + rng.normal(0, 0.01, X_true.shape)\n",
-    "\n",
-    "X = ArrayWithTime(X, ts)\n",
-    "stim = ArrayWithTime(stim, ts-1e-8)\n",
-    "\n",
-    "fig, ax = plt.subplots(subplot_kw={'projection': '3d'})\n",
-    "ax.plot(X[:,0], X[:,1], X[:,2])\n",
-    "ax.axis('equal')\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "s1 = StimRegressor(input_streams={0:'X', 1:'stim'}, spatial_stim_response=True)\n",
-    "s1.offline_run_on([X, stim], show_tqdm=True)\n",
-    "\n",
-    "s2 = StimRegressor(input_streams={0:'X', 1:'stim'}, spatial_stim_response=False)\n",
-    "s2.offline_run_on([X, stim], show_tqdm=True);\n"
+    "## Trivial manual example"
    ]
   },
   {
@@ -214,9 +171,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "## Nest example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib qt\n",
+    "dt = 0.05\n",
+    "\n",
+    "A = np.array([\n",
+    "    [np.cos(dt),  -np.sin(dt), 0],\n",
+    "    [np.sin(dt),   np.cos(dt), 0],\n",
+    "    [         0,            0, .99]\n",
+    "])\n",
+    "\n",
+    "def C(x,y):\n",
+    "    return y * x[0] / np.linalg.norm(x[:2])\n",
+    "\n",
+    "ts = np.arange(0, 500*2.1*np.pi, dt)\n",
+    "\n",
+    "stim = (ts * 0).reshape(-1, 1)\n",
+    "\n",
+    "stim[np.random.default_rng(0).choice(stim.shape[0], size=(ts.max()*.1).astype(int), replace=False)] = 1\n",
+    "\n",
+    "X_true = np.zeros((ts.size, 3))\n",
+    "X_true[0,1] = 3\n",
+    "\n",
+    "for i, t in enumerate(ts):\n",
+    "    if i == 0:\n",
+    "        continue\n",
+    "    X_true[i] = A @ X_true[i-1]\n",
+    "    X_true[i,2] += C(X_true[i-1], stim[i])\n",
+    "    X_true[i] += rng.normal(0, 0.01, X_true[i].shape)\n",
+    "\n",
+    "X = X_true + rng.normal(0, 0.01, X_true.shape)\n",
+    "\n",
+    "X = ArrayWithTime(X, ts)\n",
+    "stim = ArrayWithTime(stim, ts-1e-8)\n",
+    "\n",
+    "fig, ax = plt.subplots(subplot_kw={'projection': '3d'})\n",
+    "ax.plot(X[:,0], X[:,1], X[:,2])\n",
+    "ax.axis('equal')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s1 = StimRegressor(input_streams={0:'X', 1:'stim'}, spatial_stim_response=True)\n",
+    "s1.offline_run_on([X, stim], show_tqdm=True)\n",
+    "\n",
+    "s2 = StimRegressor(input_streams={0:'X', 1:'stim'}, spatial_stim_response=False)\n",
+    "s2.offline_run_on([X, stim], show_tqdm=True);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,45 +315,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "15",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "i_y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axs = plt.subplots(ncols=3)\n",
-    "\n",
-    "axs[0].matshow(ar.As[0])\n",
-    "axs[1].matshow(s.reg.get_beta())\n",
-    "axs[2].matshow(A.T)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
