adds a transformer wrapper for VJF

--- a/workspace/day-notebooks/VJF.ipynb
+++ b/workspace/day-notebooks/VJF.ipynb
@@ -19,8 +19,10 @@
     "from scipy.special import logsumexp\n",
     "from tqdm.notebook import trange\n",
     "import torch\n",
-    "from vjf import online\n",
-    "from scipy.stats import special_ortho_group"
+    "from vjf.online import VJF\n",
+    "from scipy.stats import special_ortho_group\n",
+    "from adaptive_latents.transformer import DecoupledTransformer\n",
+    "from adaptive_latents import ArrayWithTime"
    ]
   },
   {
@@ -62,7 +64,7 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "total_time = 1000\n",
+    "total_time = 500\n",
     "seconds_per_rotation = 1\n",
     "samples_per_second = 10\n",
     "\n",
@@ -81,32 +83,26 @@
    "source": [
     "# hyperparameters\n",
     "xdim = x.shape[-1]\n",
-    "ydim = y.shape[-1]\n",
     "udim = u.shape[-1]\n",
     "\n",
-    "device = 'cpu' # 'cuda' does not work\n",
-    "likelihood='gaussian' # Gaussian observation\n",
-    "dynamics = 'rbf'  # RBF network dynamic model\n",
-    "recognizer = \"mlp\"  # MLP recognitiom model\n",
-    "rdim = 50  # number of RBFs\n",
-    "hdim = 100  # number of MLP hidden units\n",
+    "ydim = y.shape[-1]\n",
+    "\n",
     "\n",
     "config=dict(\n",
     "    resume=False,\n",
-    "    xdim=xdim,\n",
-    "    ydim=ydim,\n",
-    "    udim=udim,\n",
+    "    xdim=xdim,  # dimension of hidden state\n",
+    "    ydim=ydim,  # dimension of observations\n",
+    "    udim=1,  # dimension of control vector\n",
     "    Ydim=udim,\n",
     "    Udim=udim,\n",
-    "    rdim=rdim,\n",
-    "    hdim=hdim,\n",
-    "    lr=1e-3,\n",
+    "    rdim=50,  # number of RBFs\n",
+    "    hdim=100,  # number of MLP hidden units\n",
+    "    lr=1e-3,  # learning rate\n",
     "    clip_gradients=5.0,\n",
     "    debug=False,\n",
-    "    likelihood=likelihood,  # \n",
-    "    system=dynamics,\n",
-    "    recognizer=recognizer,\n",
-    "    random_seed=seed,\n",
+    "    likelihood='gaussian',  # \n",
+    "    system='rbf',\n",
+    "    recognizer='mlp',\n",
     "    C=(None, True),  # loading matrix: (initial, estimate)\n",
     "    b=(None, True),  # bias: (initial, estimate)\n",
     "    A=(None, False),  # transition matrix if LDS\n",
@@ -131,7 +127,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "mdl = online.VJF(config)\n",
+    "mdl = VJF(config)\n",
     "\n",
     "ys = torch.from_numpy(y).float()\n",
     "us = torch.from_numpy(u).float()\n",
@@ -152,7 +148,119 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "ax.plot(*mu[-200:].detach().numpy().T)\n",
-    "ax.axis('equal')"
+    "ax.axis('equal');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class VJF_transformer(DecoupledTransformer):\n",
+    "    base_algorithm = VJF\n",
+    "    \n",
+    "    def __init__(self, *, config=None, latent_d=6, take_U=False, input_streams=None, output_streams=None, log_level=None):\n",
+    "        if input_streams is None:\n",
+    "            input_streams = {0:'Y', 1:'U'} if take_U else {0:'Y'}\n",
+    "        DecoupledTransformer.__init__(self=self, input_streams=input_streams, output_streams=output_streams, log_level=log_level)\n",
+    "        self.take_U = take_U\n",
+    "        self.latent_d = latent_d\n",
+    "        config = config or {}\n",
+    "        self.config = self.default_config_dict({'xdim': self.latent_d}) | config\n",
+    "        self.last_seen = {}\n",
+    "        self.vjf = None\n",
+    "        self.q = None\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def default_config_dict(update=None):\n",
+    "        default_config = dict(\n",
+    "            resume=False,\n",
+    "            # xdim=6,  # dimension of hidden state\n",
+    "            udim=1,  # dimension of control vector\n",
+    "            # Ydim=udim,  # possibly not necessary?\n",
+    "            # Udim=udim,  # possibly not necessary?\n",
+    "            rdim=50,  # number of RBFs\n",
+    "            hdim=100,  # number of MLP hidden units\n",
+    "            lr=1e-3,  # learning rate\n",
+    "            clip_gradients=5.0,\n",
+    "            debug=False,\n",
+    "            likelihood='gaussian',  # \n",
+    "            system='rbf',\n",
+    "            recognizer='mlp',\n",
+    "            C=(None, True),  # loading matrix: (initial, estimate)\n",
+    "            b=(None, True),  # bias: (initial, estimate)\n",
+    "            A=(None, False),  # transition matrix if LDS\n",
+    "            Q=(1.0, True),  # state noise\n",
+    "            R=(1.0, True),  # observation noise\n",
+    "            random_seed=0,\n",
+    "\n",
+    "            # these depend on the input dimensions\n",
+    "            # ydim=ydim,  # dimension of observations\n",
+    "            # B=(np.zeros((xdim, udim)), False),  # interaction matrix\n",
+    "        )\n",
+    "\n",
+    "        update = update if update is not None else {}\n",
+    "        return default_config | update  # the | makes a copy of the original dict\n",
+    "        \n",
+    "        \n",
+    "    def init_vjf(self, ydim, udim=1):\n",
+    "        assert self.take_U or udim==1\n",
+    "        \n",
+    "        self.config.update({\n",
+    "            'ydim': ydim, \n",
+    "            'udim': udim,\n",
+    "            'B':(np.zeros((self.config['xdim'], udim)), False),\n",
+    "        })\n",
+    "        \n",
+    "        self.vjf = VJF(self.config)\n",
+    "\n",
+    "\n",
+    "    def _partial_fit(self, data, stream):\n",
+    "        if stream in self.input_streams:\n",
+    "            self.last_seen[self.input_streams[stream]] = data\n",
+    "            \n",
+    "            if len(self.last_seen) == len(self.input_streams):\n",
+    "                y = self.last_seen['Y']\n",
+    "                if self.take_U:\n",
+    "                    u = self.last_seen['U']\n",
+    "                else:\n",
+    "                    u = np.zeros((y.shape[0], 1))\n",
+    "                    \n",
+    "                if self.vjf is None:\n",
+    "                    self.init_vjf(ydim=y.shape[-1], udim=u.shape[-1])\n",
+    "                    \n",
+    "                y = torch.from_numpy(y).float()\n",
+    "                u = torch.from_numpy(u).float()\n",
+    "                self.q, _ = self.vjf.feed((y, u), q0=self.q)\n",
+    "    \n",
+    "    def transform(self, data, stream=0, return_output_stream=False):\n",
+    "        if self.q is not None:\n",
+    "        # if self.input_streams[stream] == 'Y' and self.q is not None:\n",
+    "            q0 =  self.q[0].detach().numpy()\n",
+    "            data = ArrayWithTime.from_transformed_data(q0, data)\n",
+    "        \n",
+    "        return (data, stream) if return_output_stream else data\n",
+    "    \n",
+    "    def get_params(self, deep=True):\n",
+    "        return super().get_params(deep=deep) | dict(take_U=self.take_U, latent_d=self.latent_d, config=self.config)\n",
+    "\n",
+    "\n",
+    "v = VJF_transformer(input_streams={0:'Y'}, latent_d=2)\n",
+    "# v.test_if_api_compatible()\n",
+    "ret = v.offline_run_on([y], show_tqdm=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.plot(*ret[-200:].T)\n",
+    "ax.axis('equal');"
    ]
   },
   {
@@ -160,6 +268,15 @@
    "metadata": {},
    "source": [
     "## run with log_pred_p evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = 'cpu' # 'cuda' does not work"
    ]
   },
   {
@@ -244,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdl = online.VJF(config).to(device)\n",
+    "mdl = VJF(config).to(device)\n",
     "\n",
     "ys = torch.from_numpy(y).float().to(device)\n",
     "us = torch.from_numpy(u).float().to(device)\n",
