adds a linear dynamical system simulation class
this unites many of the previous circle-stim test functions

--- a/workspace/day-notebooks/VJF.ipynb
+++ b/workspace/day-notebooks/VJF.ipynb
@@ -81,6 +81,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib qt\n",
+    "plt.plot(*x[:11].T, '.')\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# hyperparameters\n",
     "xdim = x.shape[-1]\n",
     "udim = u.shape[-1]\n",
